--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3,6 +3,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# 1.2 自动求梯度\n",
+    "在深度学习中，我们经常需要对函数求梯度（gradient）。PyTorch提供的autograd包能够根据输入和前向传播过程自动构建计算图，并执行反向传播。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
